New database for books and corrections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
     "cSpell.words": [
         "dotenv",
         "itsdangerous"
+    ],
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "biblioteca",
+            "database": "${workspaceFolder:N1_Web_Biblioteca}/db/database.db"
+        }
     ]
 }
