created admin permissions for pages
Created admin permissions for specific pages (register, users and edit/delete books)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
             "name": "biblioteca",
             "database": "${workspaceFolder:N1_Web_Biblioteca}/db/database.db"
         }
+    ],
+    "python.analysis.extraPaths": [
+        "./routes"
     ]
 }
